Add credits controller and get actors in jellyfin
