# Shizou.WebApi/openapi.json
@@ -196,6 +196,43 @@
         }
       }
     },
+    "/api/AniDbCredits/ByAniDbAnimeId/{id}": {
+      "get": {
+        "tags": [
+          "AniDbCredits"
+        ],
+        "operationId": "ShizouHttpClient_AniDbCreditsByAniDbAnimeId",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/AniDbCredit"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/api/AniDbEpisodes": {
       "get": {
         "tags": [
@@ -1779,6 +1816,111 @@
           "bitrate": {
             "type": "integer",
             "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "AniDbCharacter": {
+        "required": [
+          "id",
+          "imageFilename",
+          "name",
+          "type"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string"
+          },
+          "type": {
+            "enum": [
+              "Unknown",
+              "Character",
+              "Mecha",
+              "Organization",
+              "Vehicle"
+            ],
+            "type": "string"
+          },
+          "imageFilename": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "AniDbCreator": {
+        "required": [
+          "id",
+          "imageFilename",
+          "name",
+          "type"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "type": {
+            "enum": [
+              "Unknown",
+              "Person",
+              "Company",
+              "Collaboration",
+              "Other"
+            ],
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "imageFilename": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "AniDbCredit": {
+        "required": [
+          "aniDbAnimeId",
+          "aniDbCreatorId",
+          "id",
+          "role"
+        ],
+        "type": "object",
+        "properties": {
+          "aniDbAnimeId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "role": {
+            "type": "string",
+            "nullable": true
+          },
+          "aniDbCreatorId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "aniDbCreator": {
+            "$ref": "#/components/schemas/AniDbCreator"
+          },
+          "aniDbCharacterId": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "aniDbCharacter": {
+            "$ref": "#/components/schemas/AniDbCharacter"
           }
         },
         "additionalProperties": false
